# srp_backend

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: local.docker.env  local.json  prod.docker.env
migrations/: V0001__initial_ddl.sql
src/: main.rs
src/controller/: auth_controller.rs  mod.rs  note_controller.rs
src/core/: auth_service.rs  mod.rs  note_service.rs
src/data/: mod.rs  note_repository.rs  user_repository.rs
src/data/enumeration/: user_role.rs
src/data/model/: note.rs  user.rs
src/model/: credentials.rs  mod.rs  new_user.rs  password_update.rs  user_claim.rs
src/util/: app_context.rs  env_manager.rs  mod.rs
src/util/error_handling/: application_error.rs  error_type.rs  mod.rs
src/util/middleware/: authenticate.rs
src/util/model/: mod.rs  password_salt.rs
