[package]
name = "srp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
actix-web = "4"
actix-cors = "0.6.5"
argon2 = "0.5.3"
chrono = { version = "0.4.35", features = [ "serde" ] }
env_logger = "0.11.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.0"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio", "runtime-actix-rustls", "macros", "with-rust_decimal", "with-bigdecimal", "with-uuid" ] }
serde = "1.0.197"
serde_json = "1.0.117"
sha2 = "0.10.8"
futures-util = "0.3.30"
